Bug #7607
closedTypeError: invalid inspect_tbl pair_list on Windows 8
Description
The changeset r38548 caused following test failures on x64 Windows 8.
-
Error:
'
test_self_referential(Psych::TestArray):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/psych/helper.rb:36:inassert_cycle' C:/work/snapshot-ms64/test/psych/test_array.rb:50:intest_self_referential'
C:/work/snapshot-ms64/lib/test/unit.rb:651:inblock in _run_suites' C:/work/snapshot-ms64/lib/test/unit.rb:649:ineach'
C:/work/snapshot-ms64/lib/test/unit.rb:649:in_run_suites' C:/work/snapshot-ms64/lib/test/unit.rb:21:inrun'
C:/work/snapshot-ms64/lib/test/unit.rb:768:inrun' C:/work/snapshot-ms64/lib/test/unit.rb:828:inrun'
C:/work/snapshot-ms64/lib/test/unit.rb:832:inrun' ./test/runner.rb:17:in -
Error:
'
test_self_referential(Psych::TestHash):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/psych/helper.rb:36:inassert_cycle' C:/work/snapshot-ms64/test/psych/test_hash.rb:26:intest_self_referential'
C:/work/snapshot-ms64/lib/test/unit.rb:651:inblock in _run_suites' C:/work/snapshot-ms64/lib/test/unit.rb:649:ineach'
C:/work/snapshot-ms64/lib/test/unit.rb:649:in_run_suites' C:/work/snapshot-ms64/lib/test/unit.rb:21:inrun'
C:/work/snapshot-ms64/lib/test/unit.rb:768:inrun' C:/work/snapshot-ms64/lib/test/unit.rb:828:inrun'
C:/work/snapshot-ms64/lib/test/unit.rb:832:inrun' ./test/runner.rb:17:in -
Error:
'
test_self_referential(Psych::TestOmap):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/psych/test_omap.rb:16:intest_self_referential' C:/work/snapshot-ms64/lib/test/unit.rb:651:inblock in _run_suites'
C:/work/snapshot-ms64/lib/test/unit.rb:649:ineach' C:/work/snapshot-ms64/lib/test/unit.rb:649:in_run_suites'
C:/work/snapshot-ms64/lib/test/unit.rb:21:inrun' C:/work/snapshot-ms64/lib/test/unit.rb:768:inrun'
C:/work/snapshot-ms64/lib/test/unit.rb:828:inrun' C:/work/snapshot-ms64/lib/test/unit.rb:832:inrun'
./test/runner.rb:17:in ` -
Error:
test_set_self_reference(Psych::TestSet):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/psych/helper.rb:36:inassert_cycle' C:/work/snapshot-ms64/test/psych/test_set.rb:46:intest_set_self_reference'
C:/work/snapshot-ms64/lib/test/unit.rb:651:in `block in _run_suites'
C:/work/snapshot-ms64/lib/test/unit.rb:649:in `each'
C:/work/snapshot-ms64/lib/test/unit.rb:649:in `_run_suites'
C:/work/snapshot-ms64/lib/test/unit.rb:21:in `run'
C:/work/snapshot-ms64/lib/test/unit.rb:768:in `run'
C:/work/snapshot-ms64/lib/test/unit.rb:828:in `run'
C:/work/snapshot-ms64/lib/test/unit.rb:832:in `run'
./test/runner.rb:17:in `<main>'
-
Error:
'
test_self_referential_struct(Psych::TestStruct):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/psych/test_struct.rb:27:intest_self_referential_struct' C:/work/snapshot-ms64/lib/test/unit.rb:651:inblock in _run_suites'
C:/work/snapshot-ms64/lib/test/unit.rb:649:ineach' C:/work/snapshot-ms64/lib/test/unit.rb:649:in_run_suites'
C:/work/snapshot-ms64/lib/test/unit.rb:21:inrun' C:/work/snapshot-ms64/lib/test/unit.rb:768:inrun'
C:/work/snapshot-ms64/lib/test/unit.rb:828:inrun' C:/work/snapshot-ms64/lib/test/unit.rb:832:inrun'
./test/runner.rb:17:in ` -
Failure:
test_class_nonascii(TestMarshal) [C:/work/snapshot-ms64/test/ruby/test_marshal.rb:302]:
[ruby-core:24882].
Exception raised:
<#<TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>>>. -
Error:
test_comparison_when_recursive(TestRange):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/ruby/test_range.rb:322:in==' C:/work/snapshot-ms64/test/ruby/test_range.rb:322:inblock in test_comparison_when_recursive'
C:/work/snapshot-ms64/lib/timeout.rb:65:intimeout' C:/work/snapshot-ms64/test/ruby/test_range.rb:321:intest_comparison_when_recursive' -
Error:
test_comparison_when_recursive(TestStruct):
TypeError: invalid inspect_tbl pair_list for :== in #<Thread:0x000045a4649558 run>
C:/work/snapshot-ms64/test/ruby/test_struct.rb:243:in==' C:/work/snapshot-ms64/test/ruby/test_struct.rb:243:inblock in test_comparison_when_recursive'
C:/work/snapshot-ms64/lib/timeout.rb:65:intimeout' C:/work/snapshot-ms64/test/ruby/test_struct.rb:242:intest_comparison_when_recursive'
Files